# rmus2024_solution_ZeroBug

./: .gitignore  .gitmodules  readme.md  techniques.md
carto_navigation/: package.xml
carto_navigation/launch/: map_writer.sh  mapping.launch  move_base.launch  navigation.launch
carto_slam/: CMakeLists.txt  package.xml
carto_slam/launch/: cartographer.launch  cartographer_localization.launch  map_writer.sh  mapping.launch
carto_slam/maps/: map_real.pbstream
carto_slam/param/: cartographer_2d.lua  (+1 more)
navigation/: CMakeLists.txt  package.xml
paper/: contributions.md
rmus_solution/: CMakeLists.txt  package.xml
rmus_solution/cfg/: manipulater_PID.cfg  manipulator.cfg  manipulator_PID.cfg
rmus_solution/launch/: carto_navigation.launch  decompress_img.launch  local_navigation.launch  manipulate.launch  start_game.launch  start_game_debug.launch  start_game_ym.launch  static_tf_publish.launch  test.launch  test_chy.launch  test_ym.launch
rmus_solution/msg/: MarkerInfo.msg  MarkerInfoList.msg
rmus_solution/params/: manipulater.yaml  manipulator.yaml
rmus_solution/scripts/: arm_ctrl.py  detect.bk.py  detect.py  img_processor.py  manipulater.py  manipulator.py  navi_control.py  play_game.py  play_game_debug.py
rmus_solution/scripts/simple_digits_classification/: model.pth  simple_digits_classify.py
rmus_solution/srv/: graspconfig.srv  graspsignal.srv  keepoutmode.srv  setgoal.srv  setgoalcoord.srv
ros_motion_planning/src/core/global_planner/global_planner_custom/: CMakeLists.txt  package.xml
rtab_slam/: CMakeLists.txt  package.xml  setup.py
(+46 files in other folders)
